--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -8,7 +8,7 @@
                 <input name="name" type="text" value="{{actor.name}}" placeholder="Name" />
             </h1>
             <div class="harm">
-                <label class="harm-label">Harm: </label>
+                <label class="harm-label">Harm Test: </label>
                 <input type="text" name="system.harm.value" value="{{system.harm.value}}" data-dtype="Number"/>
                 <span> / </span>
                 <input type="text" name="system.harm.max" value="{{system.harm.max}}" data-dtype="Number"/>
