--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -1,4 +1,4 @@
-<form class="flexcol {{cssClass}}" autocomplete="off">
+<form class="{{cssClass}} {{actor.type}} flexcol" autocomplete="off">
 
     {{!-- Sheet Header --}}
     <header class="sheet-header">
@@ -8,10 +8,10 @@
                 <input name="name" type="text" value="{{actor.name}}" placeholder="Name" />
             </h1>
             <div class="harm">
-                <label class="harm-label">Harm Test: </label>
-                <input type="text" name="system.harm.value" value="{{system.harm.value}}" data-dtype="Number"/>
+                <label class="harm-label">Harm: </label>
+                <input type="text" name="data.harm.value" value="{{data.harm.value}}" data-dtype="Number"/>
                 <span> / </span>
-                <input type="text" name="system.harm.max" value="{{system.harm.max}}" data-dtype="Number"/>
+                <input type="text" name="data.harm.max" value="{{data.harm.max}}" data-dtype="Number"/>
             </div>
             <div class="stats">
                 {{#each data.stats as |stat key|}}
