--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -9,9 +9,9 @@
             </h1>
             <div class="harm">
                 <label class="harm-label">Harm: </label>
-                <input type="text" name="harm.value" value="{{harm.value}}" data-dtype="Number"/>
+                <input type="text" name="system.attributes.harm.value" value="{{system.attributes.harm.value}}" data-dtype="Number"/>
                 <span> / </span>
-                <input type="text" name="harm.max" value="{{harm.max}}" data-dtype="Number"/>
+                <input type="text" name="system.harm.max" value="{{system.harm.max}}" data-dtype="Number"/>
             </div>
             <!-- <div class="stats">
                 {{#each data.stats as |stat key|}}
