--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -42,7 +42,7 @@
             <input type="text" name="actor.harm.value" value="{{actor.harm.value}}" data-dtype="Number"/>
             <input type="text" name="actor.system.attributes.harm.value" value="{{actor.system.attributes.harm.value}}" data-dtype="Number"/>
             <input type="text" name="actor.system.harm.value" value="{{actor.system.harm.value}}" data-dtype="Number"/>
-            <input type="text" name="system.themebook1.name" value="{{system.themebook1.name}}" />
+            <input type="text" name="system.themebook1.themebook.name" value="{{system.themebook1.themebook.name}}" />
             <input type="text" name="system.stats.charm.label" value="{{system.stats.charm.label}}" />
         </div>
 
