--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -43,6 +43,7 @@
             <input type="text" name="actor.system.attributes.harm.value" value="{{actor.system.attributes.harm.value}}" data-dtype="Number"/>
             <input type="text" name="actor.system.harm.value" value="{{actor.system.harm.value}}" data-dtype="Number"/>
             <input type="text" name="system.themebook1.themebook.name" value="{{system.themebook1.themebook.name}}" />
+            <input type="text" name="system.themebook1.name" value="{{system.themebook1.name}}" />
             <input type="text" name="system.stats.charm.label" value="{{system.stats.charm.label}}" />
         </div>
 
