Tried adjusting field

--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -9,7 +9,7 @@
             </h1>
             <div class="harm">
                 <label class="harm-label">Harm: </label>
-                <input type="text" name="system.attributes.harm.value" value="{{system.attributes.harm.value}}" />
+                <input type="text" name="system.harm.value" value="{{system.harm.value}}" />
                 <span> / </span>
                 <input type="text" name="system.harm.max" value="{{system.harm.max}}" data-dtype="Number"/>
             </div>
