--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -39,6 +39,8 @@
         <div class="tab themebooks" data-group="primary" data-tab="themebooks">
             <!-- TODO -->
             <input type="text" name="system.themebook1.themebookName" value="{{system.themebook1.themebookName}}"/>
+            <input type="text" name="system.themebook1.themebook.themebookName" value="{{system.themebook1.themebook.themebookName}}"/>
+            <input type="text" name="system.themebook1.templates" value="{{system.themebook1.templates}}"/>
         </div>
 
         {{!-- Biography Tab --}}
