--- a/templates/character-sheet-temp.html
+++ b/templates/character-sheet-temp.html
@@ -19,8 +19,9 @@
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
         <a class="item" data-tab="themebooks">Themebooks</a>
-        <a class="item" data-tab="biography">Biography</a>
         <a class="item" data-tab="items">Items</a>
+        <a class="item" data-tab="biography">Biography</a>
+        <a class="item" data-tab="notes">Notes</a>
     </nav>
 
     {{!-- Sheet Body --}}
