--- a/templates/character-sheet-temp.html
+++ b/templates/character-sheet-temp.html
@@ -26,6 +26,10 @@
 
     {{!-- Sheet Body --}}
     <section class="sheet-body">
-        
+        {{!-- Themebooks Tab --}}
+        <div class="tab themebooks" data-group="primary" data-tab="themebooks">
+            <input type="text" name="system.themebook1.themebookName" value="{{system.themebook1.themebookName}}"/>
+
+        </div>
     </section>
 </form>
