--- a/templates/character-sheet-temp.html
+++ b/templates/character-sheet-temp.html
@@ -31,5 +31,9 @@
             <input type="text" name="system.themebook1.themebookName" value="{{system.themebook1.themebookName}}"/>
 
         </div>
+        {{!-- Items Tab --}}
+        <div class="tab items" data-group="primary" data-tab="items">
+            {editor content=system.items target="system.items" button=true owner=owner editable=editable}}
+        </div>
     </section>
 </form>
