--- a/templates/character-sheet-temp.html
+++ b/templates/character-sheet-temp.html
@@ -33,7 +33,7 @@
         </div>
         {{!-- Items Tab --}}
         <div class="tab items" data-group="primary" data-tab="items">
-            {editor content=system.items target="system.items" button=true owner=owner editable=editable}}
+            {{editor content=system.items target="system.items" button=true owner=owner editable=editable}}
         </div>
     </section>
 </form>
