--- a/templates/character-sheet-temp.html
+++ b/templates/character-sheet-temp.html
@@ -33,7 +33,7 @@
         </div>
         {{!-- Items Tab --}}
         <div class="tab items" data-group="primary" data-tab="items">
-            {{ editor enrichedItems target="system.items" button=true editable=editable }}
+            {{ editor enrichedItems target="system.items" engine="prosemirror" button=true editable=editable }}
         </div>
     </section>
 </form>
