--- a/templates/actor/themebooks.hbs
+++ b/templates/actor/themebooks.hbs
@@ -1,4 +1,11 @@
-<div class="ability flexrow flex-group-center">
-    <label for="system.stats.might.value" class="resource-label">Might</label>
-    <input type="text" name="system.stats.might.value" value="{{system.stats.might.value}}" data-dtype="Number"/>
-</div>
+{{! Themebook Tab }}
+<section
+  class='tab themebooks {{tab.cssClass}}'
+  data-group='primary'
+  data-tab='themebooks'
+>
+    <div class="ability flexrow flex-group-center">
+        <label for="system.stats.might.value" class="resource-label">Might</label>
+        <input type="text" name="system.stats.might.value" value="{{system.stats.might.value}}" data-dtype="Number"/>
+    </div>
+</section>
