--- a/templates/actor/header.hbs
+++ b/templates/actor/header.hbs
@@ -10,14 +10,14 @@
     width='100'
   />
   <div class='header-fields'>
-    <div class='document-name'>
+    <h1 class='document-name'>
       <input
         name='name'
         type='text'
         value='{{actor.name}}'
         placeholder='Name'
       />
-    </div>
+    </h1>
     {{! The grid classes are defined in scss/global/_grid.scss. To use,
       use both the "grid" and "grid-Ncol" class where "N" can be any number
       from 1 to 12 and will create that number of columns.  }}
@@ -46,7 +46,7 @@
           />
         </div>
       </div>
-
+      {{log system}}
       <div class='resource flex-group-center'>
         {{#each system.stats as |ability key|}}
           <div class="ability flexrow flex-group-center">
