--- a/templates/actor/biography.hbs
+++ b/templates/actor/biography.hbs
@@ -6,7 +6,7 @@
 >
   {{! Editors must receive enriched text data from getData to properly handle rolls, UUID links, etc. }}
   {{#if editable}} 
-    <prose-mirror name="system.biography" data-document-u-u-i-d="{{actor.uuid}}" value="{{system.biography}}" collaborate="true" toggled="true">
+    <prose-mirror name="system.background.biography" data-document-u-u-i-d="{{actor.uuid}}" value="{{system.background.biography}}" collaborate="true" toggled="true">
       {{{enrichedBiography}}}
     </prose-mirror>
   {{else}} {{{enrichedBiography}}}
