--- a/templates/actor/notes.hbs
+++ b/templates/actor/notes.hbs
@@ -1,6 +1,6 @@
 {{! Notes Tab }}
 <section
-  class='tab notes {{tab.cssClass}}'
+  class='tab playernotes {{tab.cssClass}}'
   data-group='primary'
   data-tab='notes'
 >
