--- a/templates/actor/header.hbs
+++ b/templates/actor/header.hbs
@@ -1,6 +1,7 @@
 {{! Sheet Header }}
 <header class='sheet-header'>
-  <img
+  <div class="flex-row">
+    <img
     class='profile-img'
     src='{{actor.img}}'
     data-edit='img'
@@ -8,8 +9,7 @@
     title='{{actor.name}}'
     height='100'
     width='100'
-  />
-  <div class='header-fields'>
+    />
     <h1 class='document-name'>
       <input
         name='name'
@@ -18,42 +18,49 @@
         placeholder='Name'
       />
     </h1>
-    {{! The grid classes are defined in scss/global/_grid.scss. To use,
-      use both the "grid" and "grid-Ncol" class where "N" can be any number
-      from 1 to 12 and will create that number of columns.  }}
-    <div class='resources grid grid-3col'>
+  </div>
 
-      {{! "flex-group-center" is also defined in the _grid.scss file
-        and it will add a small amount of padding, a border, and will
-        center all of its child elements content and text. }}
-      <div class='resource flex-group-center'>
+  <div class="flex-row">
+    <div class="flex-column">
+      <div>
         <label for='system.harm.value' class='resource-label'>
-          Harm
+          Harm:
         </label>
-        <div class='resource-content flexrow flex-center flex-between'>
-          <input
-            type='text'
-            name='system.harm.value'
-            value='{{system.harm.value}}'
-            data-dtype='Number'
-          />
-          <span> / </span>
-          <input
-            type='text'
-            name='system.harm.max'
-            value='{{system.harm.max}}'
-            data-dtype='Number'
-          />
-        </div>
+        <input
+          type='text'
+          name='system.harm.value'
+          value='{{system.harm.value}}'
+          data-dtype='Number'
+        />
       </div>
-      <div class='resource flex-group-center'>
-        {{#each system.stats as |ability key|}}
-          <div class="ability flexrow flex-group-center">
-            <label for="system.stats.{{key}}.value" class="resource-label">{{key}}</label>
-            <input type="text" name="system.stats.{{key}}.value" value="{{ability.value}}" data-dtype="Number"/>
-          </div>
-        {{/each}}
+      <div>
+        <label for='system.harm.unstable' class='resource-label'>
+          Unstable?
+        </label>
+        <input
+          type='checkbox'
+          name='system.harm.unstable'
+          value='{{system.harm.unstable}}'
+          data-dtype='Boolean'
+        />
       </div>
     </div>
+    <meter id="harm-progress" value="{{system.harm.value}}" min="{{system.harm.min}}" max="{{system.harm.max}}"></meter>
+  </div>
+
+  <div class='resource flex-group-center'>
+    {{#each system.stats as |ability key|}}
+      <div class="ability flexcol">
+        <label for="system.stats.{{key}}.value" class="resource-label">{{key}}</label>
+        <input type="text" name="system.stats.{{key}}.value" value="system.stats.{{key}}.value" data-dtype="Number"/>
+        <div class"ability flexrow">
+          <input type='checkbox' name='system.stats.{{key}}.experience.xp1' value='system.stats.{{key}}.experience.xp1' data-dtype='Boolean'/>
+          <input type='checkbox' name='system.stats.{{key}}.experience.xp2' value='system.stats.{{key}}.experience.xp2' data-dtype='Boolean'/>
+          <input type='checkbox' name='system.stats.{{key}}.experience.xp3' value='system.stats.{{key}}.experience.xp3' data-dtype='Boolean'/>
+          <input type='checkbox' name='system.stats.{{key}}.experience.xp4' value='system.stats.{{key}}.experience.xp4' data-dtype='Boolean'/>
+          <input type='checkbox' name='system.stats.{{key}}.experience.xp5' value='system.stats.{{key}}.experience.xp5' data-dtype='Boolean'/>
+        </div>
+      </div>
+    {{/each}}
   </div>
 </header>
