--- a/templates/actor/header.hbs
+++ b/templates/actor/header.hbs
@@ -45,14 +45,7 @@
           />
         </div>
       </div>
-      <meter 
-        id="harm-progress" 
-        value="{{system.harm.value}}" 
-        min="{{system.harm.min}}" 
-        max="{{system.harm.max}} "
-        low="0"
-        high="6">
-      </meter>
+      <meter id="harm-progress" value="{{system.harm.value}}" min="{{system.harm.min}}" max="{{system.harm.max}}" high="6"></meter>
     </div>
 
     <div class='resource flexrow'>
