--- a/templates/actor/themebooks.hbs
+++ b/templates/actor/themebooks.hbs
@@ -1,8 +1,10 @@
 {{! Themebook Tab }}
-<section
-  class='tab themebooks {{tab.cssClass}}'
-  data-group='primary'
-  data-tab='themebooks'
->
-
+<section class='tab themebooks {{tab.cssClass}}' data-group='primary' data-tab='themebooks'>
+    <div class='flexgrid'>
+      {{#each system.stats as |stat key|}}
+        <div class="flexcol">
+          <label for="system.stats.{{key}}.value" class="resource-label">{{key}}</label>
+        </div>
+      {{/each}}
+    </div>
 </section>
