--- a/templates/actor/themebooks.hbs
+++ b/templates/actor/themebooks.hbs
@@ -2,7 +2,7 @@
 <section class='tab themebooks {{tab.cssClass}}' data-group='primary' data-tab='themebooks'>
     <div class='flexgrid'>
       {{#each system.stats as |stat key|}}
-        <div class="flexcol">
+        <div class="">
           <label for="system.stats.{{key}}.value" class="resource-label">{{key}}</label>
         </div>
       {{/each}}
