--- a/templates/actor/themebooks.hbs
+++ b/templates/actor/themebooks.hbs
@@ -3,7 +3,7 @@
     <div class='.grid .grid-2col'>
       {{#each system.stats as |stat key|}}
         <div class="">
-          <label for="system.stats.{{key}}.value" class="resource-label">{{key}}</label>
+          <p>Test</p>
         </div>
       {{/each}}
     </div>
