--- a/templates/actor/themebooks.hbs
+++ b/templates/actor/themebooks.hbs
@@ -1,6 +1,6 @@
 {{! Themebook Tab }}
 <section class='tab themebooks {{tab.cssClass}}' data-group='primary' data-tab='themebooks'>
-    <div class='.grid .grid-2col'>
+    <div class='grid grid-2col'>
       {{#each system.stats as |stat key|}}
         <div class="">
           <p>Test</p>
