--- a/templates/actor/themebooks.hbs
+++ b/templates/actor/themebooks.hbs
@@ -1,9 +1,28 @@
 {{! Themebook Tab }}
 <section class='tab themebooks {{tab.cssClass}}' data-group='primary' data-tab='themebooks'>
     <div class='grid grid-2col'>
-      {{#each system.stats as |stat key|}}
-        <div class="">
-          <p>Test</p>
+      {{#each system.themebooks as |themebook key|}}
+        <div class="flexcol">
+          <label for="system.themebooks.{{key}}.themebookName" class="resource-label">Themebook {{@index}}</label>
+          <select name="themebook selector">
+            {{#each system.themebooks.{{key}}.themebookName.options as |themebookOption optionKey|}}
+              <option value="volvo">Volvo</option>
+            {{/each}}
+          </select>
+          <label for="system.themebooks.{{key}}.basicMove" class="resource-label">Basic Move:</label>
+            {{#if editable}} 
+              <prose-mirror name="system.themebooks.{{key}}.basicMove" data-document-u-u-i-d="{{actor.uuid}}" value="{{system.themebooks.(key).basicMove}}" collaborate="true" toggled="true">
+                {{{"enrichedBasicMove" + @index}}}
+              </prose-mirror>
+            {{else}} {{{"enrichedBasicMove" + @index}}}
+            {{/if}}
+          <label for="system.themebooks.{{key}}.abilityList" class="resource-label">Abilities</label>
+          {{#if editable}} 
+              <prose-mirror name="system.themebooks.{{key}}.abilityList" data-document-u-u-i-d="{{actor.uuid}}" value="{{system.themebooks.(key).abilityList}}" collaborate="true" toggled="true">
+                {{{"enrichedAbilityList" + @index}}}
+              </prose-mirror>
+            {{else}} {{{"enrichedAbilityList" + @index}}}
+            {{/if}}
         </div>
       {{/each}}
     </div>
