--- a/templates/actor/themebooks.hbs
+++ b/templates/actor/themebooks.hbs
@@ -5,6 +5,8 @@
         <div class="flexcol">
           <label for="system.themebooks.{{key}}.themebookName" class="resource-label">Themebook {{@index}}</label>
           <select name="themebook selector">
+            {{log "key" system.themebooks.key}}
+            {{log "this" this}}
             {{#each system.themebooks[key].themebookName.options as |themebookOption optionKey|}}
               <option value="volvo">Volvo</option>
             {{/each}}
