--- a/templates/actor/themebooks.hbs
+++ b/templates/actor/themebooks.hbs
@@ -3,9 +3,11 @@
     <div class='grid grid-2col'>
       {{#each system.themebooks as |themebook key|}}
         <div class="flexcol">
-          <label for="system.themebooks.{{key}}.themebookName" class="resource-label">Themebook {{@index}}</label>
+          <label for="system.themebooks.{{key}}.themebookName" class="resource-label">Themebook {{@index + 1}}</label>
           <select name="themebook-selector">
+            {{log "full arr" this.themebookName.options}}
             {{#each this.themebookName.options as |nameOption|}}
+              {{log "option" nameOption}}
               <option value="system.themebooks.{{key}}.themebookName">{{nameOption}}</option>
             {{/each}}
           </select>
