--- a/templates/actor/themebooks.hbs
+++ b/templates/actor/themebooks.hbs
@@ -4,31 +4,21 @@
       {{#each system.themebooks as |themebook key|}}
         <div class="flexcol">
           <label for="system.themebooks.{{key}}.themebookName" class="resource-label">Themebook {{@index}}</label>
-          <select name="themebook-selector">
-            {{log "this" this}}
-            {{log "themebook" themebook}}
-            {{log "key" key}}
-            {{formGroup this.themebookName.options name="themebookName.options"}}
-            {{log "full arr" themebookName.options}}
-            {{#each this.themebookName.options as |nameOption|}}
-              {{log "option" nameOption}}
-              <option value="volvo">{{nameOption}}</option>
-            {{/each}}
-          </select>
+          <input type='text' name='system.themebooks.{{key}}.themebookName' value='{{this.themebookName}}'/>
           <label for="system.themebooks.{{key}}.basicMove" class="resource-label">Basic Move:</label>
-            {{!-- {{#if editable}} 
+            {{#if editable}} 
               <prose-mirror name="system.themebooks.{{key}}.basicMove" data-document-u-u-i-d="{{actor.uuid}}" value="{{system.themebooks.{{key}}.basicMove}}" collaborate="true" toggled="true">
                 {{{"enrichedBasicMove" + @index}}}
               </prose-mirror>
           {{else}} {{{"enrichedBasicMove" + @index}}}
-          {{/if}} --}}
+          {{/if}}
           <label for="system.themebooks.{{key}}.abilityList" class="resource-label">Abilities</label>
-          {{!-- {{#if editable}} 
+          {{#if editable}} 
               <prose-mirror name="system.themebooks.{{key}}.abilityList" data-document-u-u-i-d="{{actor.uuid}}" value="{{system.themebooks.{{key}}.abilityList}}" collaborate="true" toggled="true">
                 {{{"enrichedAbilityList" + @index}}}
               </prose-mirror>
           {{else}} {{{"enrichedAbilityList" + @index}}}
-          {{/if}} --}}
+          {{/if}}
         </div>
       {{/each}}
     </div>
