--- a/templates/actor/themebooks.hbs
+++ b/templates/actor/themebooks.hbs
@@ -3,21 +3,21 @@
     <div class='grid grid-2col'>
       {{#each system.themebooks as |themebook key|}}
         <div class="flexcol">
-          <label for="system.themebooks.{{key}}.themebookName" class="resource-label">Themebook {{@index}}</label>
+          <label for="system.themebooks.{{key}}.themebookName" class="resource-label">Themebook {{add @index modifier=1}}</label>
           <input type='text' name='system.themebooks.{{key}}.themebookName' value='{{this.themebookName}}'/>
           <label for="system.themebooks.{{key}}.basicMove" class="resource-label">Basic Move:</label>
             {{#if editable}} 
               <prose-mirror name="system.themebooks.{{key}}.basicMove" data-document-u-u-i-d="{{actor.uuid}}" value="{{this.basicMove}}" collaborate="true" toggled="true">
-                {{{"enrichedBasicMove" + @index}}}
+                {{{add "enrichedBasicMove" modifier=@index}}}
               </prose-mirror>
-          {{else}} {{{"enrichedBasicMove" + @index}}}
+          {{else}} {{{add "enrichedBasicMove" modifier=@index}}}
           {{/if}}
           <label for="system.themebooks.{{key}}.abilityList" class="resource-label">Abilities</label>
           {{#if editable}} 
               <prose-mirror name="system.themebooks.{{key}}.abilityList" data-document-u-u-i-d="{{actor.uuid}}" value="{{this.abilityList}}" collaborate="true" toggled="true">
-                {{{"enrichedAbilityList" + @index}}}
+                {{{add "enrichedAbilityList" modifier=@index}}}
               </prose-mirror>
-          {{else}} {{{"enrichedAbilityList" + @index}}}
+          {{else}} {{{add "enrichedAbilityList" modifier=@index}}}
           {{/if}}
         </div>
       {{/each}}
