--- a/templates/actor/themebooks.hbs
+++ b/templates/actor/themebooks.hbs
@@ -6,7 +6,7 @@
           <label for="system.themebooks.{{key}}.themebookName" class="resource-label">Themebook {{add @index modifier=1}}</label>
           <input type='text' name='system.themebooks.{{key}}.themebookName' value='{{this.themebookName}}'/>
           <label for="system.themebooks.{{key}}.basicMove" class="resource-label">Basic Move:</label>
-          {{log "THIS IS BASIC MOVE" this}}
+          {{!-- {{log "THIS IS BASIC MOVE" this}}
             {{#if editable}} 
               <prose-mirror name="system.themebooks.{{key}}.basicMove" data-document-u-u-i-d="{{actor.uuid}}" value="{{this.basicMove}}" collaborate="true" toggled="true">
                 {{{add "enrichedBasicMove" modifier=@index}}}
@@ -19,6 +19,12 @@
                 {{{add "enrichedAbilityList" modifier=@index}}}
               </prose-mirror>
           {{else}} {{{add "enrichedAbilityList" modifier=@index}}}
+          {{/if}} --}}
+          {{#if editable}} 
+              <prose-mirror name="system.themebooks.themebook0.abilityList" data-document-u-u-i-d="{{actor.uuid}}" value="{{system.themebooks.themebook0.abilityList}}" collaborate="true" toggled="true">
+                {{{add "enrichedAbilityList" modifier=00}}}
+              </prose-mirror>
+          {{else}} {{{add "enrichedAbilityList" modifier=0}}}
           {{/if}}
         </div>
       {{/each}}
