--- a/templates/actor/themebooks.hbs
+++ b/templates/actor/themebooks.hbs
@@ -24,9 +24,9 @@
       {{/each}}
           {{#if editable}} 
               <prose-mirror name="system.themebooks.themebook0.abilityList" data-document-u-u-i-d="{{actor.uuid}}" value="{{system.themebooks.themebook0.abilityList}}" collaborate="true" toggled="true">
-                {{{enrichedAbilityList0}}}
+                {{{context.enrichedAbilityList0}}}
               </prose-mirror>
-          {{else}} {{{enrichedAbilityList0}}}
+          {{else}} {{{context.enrichedAbilityList0}}}
           {{/if}}
     </div>
 </section>
